--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 version: "3.8"
 services:
+  application:
+    container_name: foodfinder-application
+    image: node:lts-alpine
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/home/node/code 
+    working_dir: /home/node/code/
+    depends_on:
+      - backend
+    environment:
+      - HOST=0.0.0.0
+      - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_INTERVAL=100
+    tty: true
   backend:
     container_name: foodfinder-backend
     image: mongo:latest
@@ -13,8 +28,6 @@ services:
     volumes:
       - ./docker/foodfinder-backend/seed-mongodb.js:/docker-entrypoint-initdb.d/seed-mongodb.js
       - mongodb_data_container:/data/db
-
-
 
 
 volumes:
