S1: Add start Next.js automatically

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - CHOKIDAR_USEPOLLING=true
       - CHOKIDAR_INTERVAL=100
     tty: true
+    command: "npm run dev"
   backend:
     container_name: foodfinder-backend
     image: mongo:latest
