S1: Add root privilege to user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - CHOKIDAR_INTERVAL=100
     tty: true
     command: "npm run dev"
+    user: ${MY_USER}
   backend:
     container_name: foodfinder-backend
     image: mongo:latest
