🔥 S2: docker-compose > remove version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   application:
     container_name: foodfinder-application
@@ -28,7 +27,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - ./docker/foodfinder-backend/seed-mongodb.js:/docker-entrypoint-initdb.d/seed-mongodb.js
+      - ./.docker/foodfinder-backend/seed-mongodb.js:/docker-entrypoint-initdb.d/seed-mongodb.js
       - mongodb_data_container:/data/db
 
 
