--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,38 @@
 services:
+
+  backend:
+    container_name: foodfinder-backend
+    image: mongo:latest
+    restart: always
+    environment:
+      DB_NAME: foodfinder
+      MONGO_INITDB_DATABASE: foodfinder
+    ports:
+      - "27017:27017"
+    volumes:
+      # map seed script
+      - ./.docker/foodfinder-backend/seed-mongodb.js:/docker-entrypoint-initdb.d/seed-mongodb.js
+      # map mongoDB database to a shared volume to persist the data
+      - mongodb_data_container:/data/db
+
   application:
     container_name: foodfinder-application
     image: node:lts-alpine
+    # configure working directory for installing next.js
+    working_dir: /home/node/code/foodfinder-application
     ports:
       - "3000:3000"
     volumes:
       - .:/home/node/code 
-    working_dir: /home/node/code/foodfinder-application
     depends_on:
       - backend
     environment:
       - HOST=0.0.0.0
       - CHOKIDAR_USEPOLLING=true
       - CHOKIDAR_INTERVAL=100
+    # keep container alive for installing next.js
     tty: true
     command: "npm run dev"
-    user: ${MY_USER}
-  backend:
-    container_name: foodfinder-backend
-    image: mongo:latest
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: secret
-      MONGO_INITDB_DATABASE: foodfinder
-    ports:
-      - "27017:27017"
-    volumes:
-      - ./.docker/foodfinder-backend/seed-mongodb.js:/docker-entrypoint-initdb.d/seed-mongodb.js
-      - mongodb_data_container:/data/db
 
 
 volumes:
