--- a/foodfinder-application/package.json
+++ b/foodfinder-application/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.3",
+    "@as-integrations/next": "^3.2.0",
+    "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
     "react": "^19.0.0",
