--- a/foodfinder-application/package.json
+++ b/foodfinder-application/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@as-integrations/next": "^3.2.0",
+    "@types/styled-components": "^5.1.34",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "mongoose": "^8.10.0",
