--- a/foodfinder-application/package.json
+++ b/foodfinder-application/package.json
@@ -16,6 +16,7 @@
     "graphql-tag": "^2.12.6",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.15"
